<resources>
    <string name="app_name">OPTITASK</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="loading">Loading…</string>
    <string name="as_name_title">Введите короткий номер</string>
    <string name="as_name_title_set">Установите короткий код</string>
    <string name="as_name_title_set_repit">Повторите введенный код</string>
    <string name="as_name_title_set_pop">Попробуйте еще раз</string>
    <string name="as_1">1</string>
    <string name="as_2">2</string>
    <string name="as_3">3</string>
    <string name="as_4">4</string>
    <string name="as_5">5</string>
    <string name="as_6">6</string>
    <string name="as_7">7</string>
    <string name="as_8">8</string>
    <string name="as_9">9</string>
    <string name="as_0">0</string>
    <string name="as_del">DEL</string>
    <string name="banner_ad_unit_id">ca-app-pub-2826523946896450/9299703544</string>
</resources>
