<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_backgroud"
    tools:context=".Activity.AuthShort">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/as_name_title"
        android:textColor="@color/grey_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/CustomRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:isIndicator="true"
        android:numStars="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button1"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_main"
        android:text="@string/as_1"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/grey_100"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/button2"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:background="@drawable/button_main"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@color/grey_100"
        android:text="@string/as_2"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_main"
        android:textColor="@color/grey_100"
        android:text="@string/as_3"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_main"
        android:text="@string/as_4"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main"
        android:text="@string/as_5"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main"
        android:text="@string/as_6"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_main"
        android:text="@string/as_7"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button8"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main"
        android:text="@string/as_8"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button9"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main"
        android:text="@string/as_9"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <Button
        android:id="@+id/button0"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main"
        android:text="@string/as_0"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintEnd_toEndOf="@+id/button8"
        app:layout_constraintStart_toStartOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <Button
        android:id="@+id/buttondel"
        android:layout_width="@dimen/btn_l_width"
        android:layout_height="@dimen/btn_l_height"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_main"
        android:text="@string/as_del"
        android:textColor="@color/grey_100"
        android:textSize="@dimen/btn_text_size"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9" />
</androidx.constraintlayout.widget.ConstraintLayout>